fix spacing in gallery

--- a/src/scss/partials/gallery/_gallery.scss
+++ b/src/scss/partials/gallery/_gallery.scss
@@ -1,6 +1,10 @@
 .gallery {
     padding-top: 50px;
 
+    @include media-breakpoint-down(md) {
+        padding-top: 25px;
+    }
+
     &-title {
         font-size: 40px;
         margin-bottom: 25px;
@@ -10,7 +14,6 @@
 
         @include media-breakpoint-down(md) {
             font-size: 32px;
-            margin-bottom: 0px;
         }
     }
 }
